@@ -1,0 +1,14 @@
+_obj
+_test
+*.6
+*.out
+_testmain.go
+\#*
+.\#*
+*.log
+_cgo*
+*.o
+*.a
+*.mprof
+*.prof
+_testdata
