@@ -6,6 +6,7 @@
 	* pkg/webrocket/admin_serve_mux_test.go: admin serve mux tests
 	* pkg/webrocket/vhost.go: changed DeleteVhost return argument to be an error
 	* pkg/webrocket/vhost_test.go: fixed tests
+	* pkg/kosmonaut/: kosmonaut client moved here, better tests for it.
 	* cmd/webrocket-admin/integration_test.go: added cases for regenerate_vhost_token command
 	* cmd/webrocket-admin/main.go: fixed maybeChannel implx
 
